--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   ],
   "engines": {
     "node": "7.7.0",
-    "npm": "1.2.x"
+    "npm": "4.1.2"
   },
   "dependencies": {
     "body-parser": "^1.15.0",
